test/mock/plugins/invalid/invalid-service.js
module.exports = {
  service: 'lolidk',
  methods: {
    foo: {
      request: async () => {},
    },
  },
}
